made changes after review

--- a/lab2/Syntax.in
+++ b/lab2/Syntax.in
@@ -3,6 +3,8 @@ declarationList = declaration | declaration ";" declarationList
 declaration = individualDeclaration | arrayDeclaration 
 individualDeclaration = type ":" IDENTIFIER
 arrayDeclaration = type ":" IDENTIFIER "[" nr "]"
+nr = nonzerodigit {"0" | nonzerodigit}
+nonzerodigit = "1" |...| "9"
 type = "int" | "char"
 statement = compoundStatement | assignmentStatement | printStatement | incrementStatement | conditionalStatement
 conditionalStatement = ifStatement | whileStatement | forStatement
